test/syntax/soliditypp/pragma/low_version.solpp
// SPDX-License-Identifier: GPL-3.0
pragma soliditypp >= 100.0.0;
// ----
// ParserError 5333: (36-65): Source file requires different compiler version (current compiler is ....